[build-system]
requires = [
  "setuptools>=68",
  "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "osyris"
description = "A package to visualize AMR data from the RAMSES code"
authors = [{ name = "Neil Vaytet" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"

dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pint",
]

dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/osyris-project/osyris/issues"
"Documentation" = "https://osyris.readthedocs.io"
"Source" = "https://github.com/osyris-project/osyris"

[tool.setuptools_scm]
