[metadata]
name = osyris
version = 2.0.0
author = Neil Vaytet
author_email = neil.vaytet@esss.se
description = A package to visualize AMR data from the RAMSES code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nvaytet/osyris
project_urls =
    Bug Tracker = https://github.com/nvaytet/osyris/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    scipy
    pint

[options.packages.find]
where = src
