[metadata]
name = osyris
author = Neil Vaytet
author_email = neil.vaytet@esss.se
description = A package to visualize AMR data from the RAMSES code
license = BSD
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osyris-project/osyris
project_urls =
    Bug Tracker = https://github.com/osyris-project/osyris/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numba
    numpy
    pint

[options.packages.find]
where = src

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
